# traincontrol

./: .gitignore  LICENSE  README.md  traincontrol.code-workspace
docs/: AI for HW development.odp  development-setup.md  discovery-protocol.md  high-level-design.md  traincontrol-userguide.md
hw/: PLAN.md  gen_sch.py
hw/traincontrol-shield/: BOM.md  PLAN.md  _autosave-xor-interlock.kicad_sch  fp-lib-table  mcu.kicad_sch  opto-triac-drive.kicad_sch  power-supply.kicad_sch  rail-voltage-sense.kicad_sch  schematics-plan.md  sym-lib-table  traincontrol-shield.kicad_pcb  traincontrol-shield.kicad_prl  traincontrol-shield.kicad_pro  traincontrol-shield.kicad_sch  triacs-snubbers.kicad_sch  xor-interlock.kicad_sch  zero-crossing.kicad_sch
hw/traincontrol-shield/libs/: traincontrol-shield.kicad_sym
hw/traincontrol-shield/libs/traincontrol-shield.pretty/: DIO-BG-TH_DF.kicad_mod  OPTO-SMD-4_L4.4-W4.1-P2.54-LS7.0-TL.kicad_mod  SMD-6_L7.3-W6.5-P2.54-LS10.2-BL.kicad_mod  WIFIM-SMD_ESP32-C3-MINI-1.kicad_mod
hw/traincontrol-shield/outputs/jlcpcb/: jlcpcb-bom.csv  jlcpcb-cpl.csv
hw/traincontrol-shield/tmp/: gen_all_sheets.py  gen_power_supply.py  gen_top_level.py  upgrade_local_lib.py
sw/: CMakeLists.txt  sdkconfig.defaults  traincontrol.code-workspace
sw/.claude/commands/: easyeda2kicad.md
sw/main/: CMakeLists.txt  config.c  config.h  discovery.c  discovery.h  event_log.c  event_log.h  idf_component.yml  main.c  modbus_server.c  modbus_server.h  motor_control.c  motor_control.h  provisioning.c  provisioning.h  status_led.c  status_led.h  wifi_manager.c  wifi_manager.h
sw/test/: build_system_test.sh  flash_system_test.sh  roll_train.sh  run_system_tests.sh  run_unit_tests.sh  test_readme.md
sw/test/system/: CMakeLists.txt  pytest_system.py  sdkconfig.defaults
sw/test/system/components/config/: CMakeLists.txt
sw/test/system/components/event_log/: CMakeLists.txt
sw/test/system/components/modbus_server/: CMakeLists.txt
sw/test/system/components/motor_control/: CMakeLists.txt
sw/test/system/components/provisioning/: CMakeLists.txt
sw/test/system/components/wifi_manager/: CMakeLists.txt
sw/test/system/main/: CMakeLists.txt  test_main.c
sw/test/unit/: CMakeLists.txt  test_config.c  test_modbus_server.c  test_motor_control.c  test_provisioning.c  test_wifi_manager.c
sw/test/unit/fakes/: esp_console.h  esp_err.h  esp_event.h  esp_http_server.h  esp_log.h  esp_mac.h  esp_netif.h  esp_timer.h  esp_wifi.h  event_log.h  fakes_state.c  fakes_state.h  mdns.h  nvs.h
sw/test/unit/fakes/driver/: gpio.h
sw/test/unit/fakes/freertos/: FreeRTOS.h  task.h
sw/test/unit/fakes/lwip/: sockets.h
